--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -18,6 +18,6 @@
         <input type="submit" value="로그아웃">
     </form>
 </th:block>
-<a th:href="@{/admin/home}">어드민 홈</a>
+<a th:href="@{/admin/admin-login}">어드민 로그인</a>
 </body>
 </html>
