--- a/src/main/resources/templates/admin/admin-login.html
+++ b/src/main/resources/templates/admin/admin-login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <p>어드민 로그인</p>
-<form th:action="@{/loginAdmin}" method="post">
+<form th:action="@{/admin/loginAdmin}" method="post">
     <p>이메일: <input type="text" name="username"></p>
     <p>비밀번호: <input type="password" name="password"></p>
     <input type="submit" value="로그인">
