--- a/src/main/resources/templates/user/login-page.html
+++ b/src/main/resources/templates/user/login-page.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <p>로그인</p>
-<form th:action="@{/loginUser}" method="post">
+<form th:action="@{/user/loginUser}" method="post">
     <p>이메일: <input type="text" name="username"></p>
     <p>비밀번호: <input type="password" name="password"></p>
     <input type="submit" value="로그인">
