--- a/src/main/resources/templates/admin/admin-home.html
+++ b/src/main/resources/templates/admin/admin-home.html
@@ -6,12 +6,11 @@
 </head>
 <body>
 <p>어드민 홈</p>
-
 <th:block sec:authorize="isAuthenticated()">
     Logged user: <span sec:authentication="name">Bob</span>
     Logged role: <span sec:authentication="principal.authorities">Bob</span>
     Logged password: <span sec:authentication="principal.password">Bob</span>
-    <form th:action="@{/logout}" method="post">
+    <form th:action="@{/admin/adminLogout}" method="post">
         <input type="submit" value="로그아웃">
     </form>
 </th:block>
