--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -14,7 +14,7 @@
     Logged user: <span sec:authentication="name">Bob</span>
     Logged role: <span sec:authentication="principal.authorities">Bob</span>
     Logged password: <span sec:authentication="principal.password">Bob</span>
-    <form th:action="@{/logout}" method="post">
+    <form th:action="@{/user/logout}" method="post">
         <input type="submit" value="로그아웃">
     </form>
 </th:block>
