--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -5,8 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<a th:href="@{/login-page}">로그인</a>
-<a th:href="@{/signup-page}">회원가입</a>
+<a th:href="@{/user/login-page}">로그인</a>
+<a th:href="@{/user/signup-page}">회원가입</a>
 <a th:href="@{/admin/admin-login}">어드민 로그인</a>
 </body>
 </html>
